WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139139
[MSE] Fix not always calling mediaPlayer seek.
https://bugs.webkit.org/show_bug.cgi?id=139139
Summary
[MSE] Fix not always calling mediaPlayer seek.
Bartlomiej Gajda
Reported
2014-12-01 11:28:45 PST
Change :
https://bugs.webkit.org/show_bug.cgi?id=118752
unrightfully changed : - if (m_mediaSource && m_mediaSource->readyState() != MediaSource::closedKeyword()) + if (m_mediaSource && m_mediaSource->isClosed()) but the whole sense of this is that if media source is not closed, then it should always call m_player->seek, and so on. (even comment says so) Second expression should be negated.
Attachments
always notifying of seek with mse
(1.33 KB, patch)
2014-12-01 11:31 PST
,
Bartlomiej Gajda
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Bartlomiej Gajda
Comment 1
2014-12-01 11:31:15 PST
Created
attachment 242323
[details]
always notifying of seek with mse Not sure can this behavior be tested using MockMediaSource, as events are going in (but it we would printf() in middle of seek function, and seek to currentTime(), it would not go)
WebKit Commit Bot
Comment 2
2014-12-01 14:04:10 PST
Comment on
attachment 242323
[details]
always notifying of seek with mse Clearing flags on attachment: 242323 Committed
r176604
: <
http://trac.webkit.org/changeset/176604
>
WebKit Commit Bot
Comment 3
2014-12-01 14:04:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug