[MSE] Fix not always calling mediaPlayer seek. https://bugs.webkit.org/show_bug.cgi?id=139139

Patch by Bartlomiej Gajda <b.gajda@samsung.com> on 2014-12-01
Reviewed by Jer Noble.

Original comment states that media source shall always be notified of seek if it's not closed.

No new tests needed.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::seekTimerFired):

Canonical link: https://commits.webkit.org/156982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176604 268f45cc-cd09-0410-ab3c-d52691b4dbfc